fix: resolve auth/registration/chat bugs, redesign UI, add geolocation privacy & multi-photo support